<resources>
    <string name="app_name">TraineeApp</string>
    <string name="splash_text">Welcome To The Android App</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="pass_hint">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="txt_forgot_pass">Forgot Password</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign_in</string>
    <string name="txt_fname">First Name</string>
    <string name="edt_fname">Enter Your First Name</string>
    <string name="txt_lname">Last Name</string>
    <string name="edt_lname">Enter Your Last Name</string>
    <string name="text_gender">Gender</string>
    <string name="rdb_male">Male</string>
    <string name="rdb_female">Female</string>
    <string name="txt_phone_no">Phone No.</string>
    <string name="txt_con_password">Confirm Password</string>
    <string name="edt_con_password">ReEnter Your Password</string>
    <string name="have_acc">Already Have An Account?</string>
    <string name="txt_signin">Sign_in</string>
    <string name="btn_sign_up">Sign_Up</string>
    <string name="txt_user_name">User Name</string>
    <string name="edt_uer_name">Enter The User Name</string>
    <string name="txt_old_pass">Old Password</string>
    <string name="edt_old_pass">Enter Your Old Password</string>
    <string name="txt_new_pass">New Password</string>
    <string name="edt_new_pass">Enter Your New Password</string>
    <string name="btn_update">Update</string>
    <string name="btn_reset">Reset</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_logout">LOGOUT</string>
    <string name="action_AlterDelete">DELETE_ALTER</string>
    <string name="action_CustomeDelete">DELETE_CUSTOM</string>
    <string name="action_delete">DELETE</string>
    <string name="action_ok">This is An Custom Dialog Box Example!!</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="event_predefine">Event Predefine</string>
    <string name="event_custom">Event Custom</string>
    <string name="sent_predefine">Predefine event sent.</string>
    <string name="sent_custom">Custom event sent.</string>
</resources>
