<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFC13E"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fname"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_fname"
        android:layout_alignBaseline="@id/txt_fname"
        android:layout_toRightOf="@id/txt_fname"
        android:hint="@string/edt_fname"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txt_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_fname"
        android:layout_marginTop="15dp"
        android:text="@string/txt_lname"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_lname"
        android:layout_toRightOf="@id/txt_lname"
        android:hint="@string/edt_lname"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txt_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_lname"
        android:layout_marginTop="15dp"
        android:text="@string/text_gender"
        android:textSize="15dp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rdb_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_gender"
        android:layout_toRightOf="@id/txt_gender"
        android:text="@string/rdb_male"
        android:textSize="15dp" />

    <RadioButton
        android:id="@+id/rdb_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_gender"
        android:layout_toRightOf="@id/rdb_male"
        android:text="@string/rdb_female"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_gender"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_email"
        android:layout_toRightOf="@id/txt_email"
        android:hint="@string/email_hint"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_pass"
        android:layout_toRightOf="@id/txt_pass"
        android:hint="@string/pass_hint"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txt_con_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_pass"
        android:layout_marginTop="15dp"
        android:text="@string/txt_con_password"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_con_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_con_pass"
        android:layout_toRightOf="@id/txt_con_pass"
        android:hint="@string/edt_con_password"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txt_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_con_pass"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/have_acc"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_have_acc"
        android:layout_toRightOf="@id/txt_have_acc"
        android:text="@string/txt_signin"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_have_acc"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_sign_up"
        android:textSize="20dp" />
</RelativeLayout>