<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_back"
    android:layout_gravity="center">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fname"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_fname"
        android:hint="@string/edt_fname"
        android:maxLines="1"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txt_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_fname"
        android:layout_marginTop="5dp"
        android:text="@string/txt_lname"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_lname"
        android:hint="@string/edt_lname"
        android:maxLines="1"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txt_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_lname"
        android:layout_marginTop="1dp"
        android:text="@string/text_gender"
        android:textSize="20dp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/rdg_gender"
        android:layout_width="match_parent"
        android:layout_below="@id/txt_gender"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdb_male"
            android:checked="true"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/rdb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdb_female"
            android:textSize="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_gender"
        android:layout_marginTop="35dp"
        android:text="@string/email"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email"
        android:hint="@string/email_hint"
        android:editable="false"
        android:maxLines="1"
        android:textSize="20dp" />


    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_update"
        android:textSize="17dp" />

</RelativeLayout>
</RelativeLayout>
